# liga-offline

./: .gitignore  README.md  package-lock.json  package.json  server.mjs
public/: clasificacion.html  club.html  clubs.html  configurar-competicion.html  crear-competicion.html  entrar-resultado.html  estadisticas.html  index.html  jornada-offline.html  jornada.html  jugadores.html  manifest.webmanifest  partido.html  pichichi.html  resultados.html  service-worker.js
public/css/: admin.css  apuestas.css  arbitros.css  base.css  bracket.css  calculadora.css  clasificacion.css  club-plantilla.css  clubs.css  competition-management.css  competitions.css  components.css  comunicados.css  dashboard.css  draw-preview.css  estadisticas.css  fanbase.css  groups.css  home.css  jornada.css  jugadores.css  landing.css  noticias.css  palmares.css  partido.css  periodistas.css  pichichi.css  plantilla-roles.css  profile.css  quiniela.css  resultados.css  sorteo.css  style.css  team-selector.css  theme-customizer.css
public/js/: loader.js  theme-preload.js
public/js/liga/: clasificacion.js  club-palmares.js  club.js  clubs.js  (+12 more)
scripts/: apply-sql.mjs  club-formations.js  export-seed-clean.mjs  export-seed.mjs  import-catalog.mjs  import-crests.mjs  resim-competition.mjs  seed-dev.mjs  simulate-match.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
supabase/schema/: 01-core.sql  02-geo.sql  03-referees.sql  04-palmares.sql  05-cards-injuries.sql  06-views.sql  07-awards.sql  08-formations.sql  09-utils.sql  10-human-teams.sql  roles.sql  spike.sql
(+70 files in other folders)
